--- a/frontend/ostream-web/package.json
+++ b/frontend/ostream-web/package.json
@@ -8,15 +8,21 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@react-18-pdf/renderer": "^2.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "docx-preview": "^0.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.13.3",
+    "web-vitals": "^2.1.4",
+    "xlsx-preview": "^1.0.4",
+    "zustand": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
